--- a/src/components/SiderMenu/index.css
+++ b/src/components/SiderMenu/index.css
@@ -4,9 +4,10 @@
   padding: 0 24px;
   cursor: pointer;
   transition: color 0.3s;
+  color: white;
 }
 .trigger:hover {
-  color: #1890ff;
+  color: #000;
 }
 .logo {
   height: 32px;
@@ -27,14 +28,15 @@
 ::-webkit-scrollbar-thumb {
   -webkit-border-radius: 10px;
   border-radius: 10px;
-  background: #455A64;
+  background: #455a64;
   -webkit-box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.5);
 }
 ::-webkit-scrollbar-thumb:window-inactive {
-  background: #455A64;
+  background: #455a64;
 }
 .sidebar {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 3px 10px 30px 3px rgba(0, 0, 0, 0.19);
+  background-color: #2371e4 !important;
 }
 .u_text_gateway {
   color: white;
