change theme and add lib rechart

--- a/src/components/Header/index.less
+++ b/src/components/Header/index.less
@@ -1,3 +1,7 @@
+.header-container {
+  font-family: 'Myriad Pro', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+}
+
 .trigger {
   font-size: 18px;
   line-height: 64px;
