--- a/src/components/Layout/AppLayout.css
+++ b/src/components/Layout/AppLayout.css
@@ -22,4 +22,8 @@
 .root-layout .ant-layout-header {
   border-bottom: 1px solid #f0f0f0;
 }
+.root-layout .footer {
+  height: 45px;
+  padding: 10px 0 0 0;
+}
 /*# sourceMappingURL=AppLayout.css.map */
