--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -1,3 +1,6 @@
+.header-container {
+  font-family: 'Myriad Pro', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+}
 .trigger {
   font-size: 18px;
   line-height: 64px;
