--- a/src/components/Layout/AppLayout.less
+++ b/src/components/Layout/AppLayout.less
@@ -28,16 +28,16 @@
 
 .root-layout {
   .sidebar {
-
   }
   .app-layout {
- 
   }
   .ant-layout-header {
-    border-bottom: 1px solid #f0f0f0;;
+    border-bottom: 1px solid #f0f0f0;
   }
-  .l-content{
+  .l-content {
   }
   .footer {
+    height: 45px;
+    padding: 10px 0 0 0;
   }
 }
