--- a/src/components/Layout/AppLayout.less
+++ b/src/components/Layout/AppLayout.less
@@ -35,9 +35,24 @@
     border-bottom: 1px solid #f0f0f0;
   }
   .l-content {
+    height: 100%;
+    overflow: auto;
+   
   }
   .footer {
     height: 45px;
     padding: 10px 0 0 0;
+  }
+  ::-webkit-scrollbar {
+    width: 2px;
+    height: 4px;
+  }
+  
+ ::-webkit-scrollbar-thumb {
+    background-color: #1890ff;
+    border-radius: 6px;
+  }
+::-webkit-scrollbar-track {
+    background-color: #f0f0f0;
   }
 }
