--- a/src/scenes/SalePlan/Detail/index.less
+++ b/src/scenes/SalePlan/Detail/index.less
@@ -57,3 +57,24 @@
 .testClass{
     background-color: aqua;
 }
+
+.Table-valueColor{
+  color: #606062;
+}
+.Table-columns-name{
+  color:#4069e5 ;
+}
+.editable-cell {
+  position: relative;
+}
+
+.editable-cell-value-wrap {
+  padding: 5px 12px;
+  cursor: pointer;
+}
+
+.editable-row:hover .editable-cell-value-wrap {
+  padding: 4px 11px;
+  border: 1px solid #d9d9d9;
+  border-radius: 2px;
+}
