Update css component PageHeading

--- a/src/components/PageHeading/index.less
+++ b/src/components/PageHeading/index.less
@@ -3,12 +3,12 @@
 }
 
 .outer {
-  width: fit-content;
-  border-radius: 6px;
+  // width: 100%;
+  border-radius: 5px;
   border: 1px solid #4f67e3;
   padding: 4px 8px;
   box-shadow: 2px 2px 2px #5f76e8d2;
-  font-size: .9rem;
+  font-size: 1rem;
   font-weight: 600;
   color: #4f67e3;
 }
